[gd_scene load_steps=31 format=2]

[ext_resource path="res://TalkingRed/talking_red.gd" type="Script" id=1]
[ext_resource path="res://TalkingRed/assets/background_shadow.png" type="Texture" id=2]
[ext_resource path="res://TalkingRed/assets/Foreground.png" type="Texture" id=3]
[ext_resource path="res://TalkingRed/assets/RED_FORWARD.png" type="Texture" id=4]
[ext_resource path="res://TalkingRed/assets/RED_LISTENING_2.png" type="Texture" id=5]
[ext_resource path="res://TalkingRed/assets/RED_LISTENING.png" type="Texture" id=6]
[ext_resource path="res://TalkingRed/assets/RED_MOUTH_2.png" type="Texture" id=7]
[ext_resource path="res://TalkingRed/assets/RED_MOUTH_1.png" type="Texture" id=8]
[ext_resource path="res://TalkingRed/assets/angry-birds-red-flying.wav" type="AudioStream" id=9]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://grey_box.png" type="Texture" id=11]
[ext_resource path="res://highlight.png" type="Texture" id=12]
[ext_resource path="res://grey_boxCheckmark.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "listening",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "listening loud",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "talking1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "talking2",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.905882, 0.862745, 0.266667, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.882353, 0.760784, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=19]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )
width = 1

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.945098, 0.745098, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.82, 0.64534, 0.2378, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/slider.png-fdb8b61081749505ff9dd8e2f40f943d.stex"

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/slider.png-fdb8b61081749505ff9dd8e2f40f943d.stex"

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/slider.png-fdb8b61081749505ff9dd8e2f40f943d.stex"

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.945098, 0.745098, 0.278431, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=20]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="TalkingRed" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 720, 1440 )
texture = ExtResource( 2 )

[node name="Red" type="AnimatedSprite" parent="."]
position = Vector2( 720, 1440 )
frames = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Overlay" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="DBGText" type="RichTextLabel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "sdfsdfsdf"

[node name="Settings" type="Control" parent="CanvasLayer"]
margin_top = 234.0
margin_right = 40.0
margin_bottom = 274.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings"]
margin_left = 296.0
margin_top = 131.0
margin_right = 1100.0
margin_bottom = 748.0
custom_styles/panel = SubResource( 9 )

[node name="options" type="RichTextLabel" parent="CanvasLayer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 539.0
margin_top = 159.0
margin_right = 815.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 288, -20 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 19 )
text = "OPTIONS"

[node name="mic_sensitivity" type="RichTextLabel" parent="CanvasLayer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 309.0
margin_top = 274.0
margin_right = 723.0
margin_bottom = 367.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 19 )
text = "Mic Sensitivity"

[node name="SensitivityDisplay" type="HSlider" parent="CanvasLayer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 312.0
margin_top = 351.0
margin_right = 1042.0
margin_bottom = 456.0
custom_icons/tick = SubResource( 11 )
custom_icons/grabber_disabled = SubResource( 11 )
custom_icons/grabber_highlight = SubResource( 11 )
custom_icons/grabber = SubResource( 11 )
custom_styles/slider = SubResource( 12 )
custom_styles/grabber_area_highlight = SubResource( 13 )
custom_styles/grabber_area = SubResource( 14 )
min_value = -75.0
max_value = 10.0
value = -50.0

[node name="SliderSensitivity" type="HSlider" parent="CanvasLayer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 312.0
margin_top = 351.0
margin_right = 1042.0
margin_bottom = 456.0
custom_icons/grabber_disabled = SubResource( 15 )
custom_icons/grabber_highlight = SubResource( 16 )
custom_icons/grabber = SubResource( 17 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 8 )
min_value = -75.0
max_value = 10.0
value = -50.0

[node name="ShowDebug" type="CheckBox" parent="CanvasLayer/Settings"]
margin_left = 333.0
margin_top = 478.0
margin_right = 753.0
margin_bottom = 569.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 19 )
custom_icons/checked = ExtResource( 13 )
custom_icons/unchecked = ExtResource( 11 )
shortcut_in_tooltip = false
text = " Show Debug"

[node name="mic info" type="RichTextLabel" parent="CanvasLayer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 293.0
margin_top = 607.0
margin_right = 1062.0
margin_bottom = 726.0
rect_pivot_offset = Vector2( 288, -20 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 20 )
bbcode_enabled = true
bbcode_text = "[center]No mic input? Make sure Talking Red has access![/center]"
text = "No mic input? Make sure Talking Red has access!"
fit_content_height = true

[node name="Highlights" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HighlightSettings" type="TextureRect" parent="CanvasLayer/Highlights"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1058.0
margin_top = 33.0
margin_right = 1355.0
margin_bottom = 331.0
texture = ExtResource( 12 )

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -327.0
margin_top = 45.0
margin_right = -49.0
margin_bottom = 322.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true

[node name="Microphone" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Capture"

[node name="Red Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "RedVoice"

[connection signal="value_changed" from="CanvasLayer/Settings/SliderSensitivity" to="." method="_on_sensitivity_value_changed"]
[connection signal="toggled" from="CanvasLayer/Settings/ShowDebug" to="." method="_on_show_debug_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsButton" to="." method="_on_settings_toggled"]
[connection signal="finished" from="Microphone" to="." method="_on_microphone_finished"]
